--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "antd-mobile": "^5.28.0",
     "axios": "^1.3.1",
     "browser-image-compression": "^2.0.0",
+    "dotenv-webpack": "^8.0.1",
+    "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
