--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.3.1",
     "browser-image-compression": "^2.0.0",
     "dotenv-webpack": "^8.0.1",
+    "dropzone": "^6.0.0-beta.2",
+    "faker": "^6.6.6",
     "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
