--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.1",
+    "bootstrap": "^5.3.0-alpha1",
     "browser-image-compression": "^2.0.0",
     "dotenv-webpack": "^8.0.1",
     "dropzone": "^6.0.0-beta.2",
