--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-canvas-draw": "^1.2.1",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
