--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dropzone": "^6.0.0-beta.2",
     "hoist-non-react-statics": "^3.3.2",
     "http-proxy-middleware": "^2.0.6",
+    "json-server": "^0.17.1",
+    "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
@@ -35,7 +37,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch db.json --port 8000",
+    "server": "json-server-auth --watch db.json --port 8000"
   },
   "eslintConfig": {
     "extends": [
