--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "axios": "^1.3.1",
     "bootstrap": "^5.3.0-alpha1",
     "browser-image-compression": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "dotenv-webpack": "^8.0.1",
     "dropzone": "^6.0.0-beta.2",
+    "fs": "^0.0.1-security",
     "hoist-non-react-statics": "^3.3.2",
+    "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.6",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1",
     "react": "^18.2.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
@@ -30,15 +36,19 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "stream": "^0.0.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.0"
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.0",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 8000",
     "server": "json-server-auth --watch db.json --port 8000"
   },
   "eslintConfig": {
