--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
     "react-canvas-draw": "^1.2.1",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
